--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,9 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
     <link href="//fonts.googleapis.com/css?family=Roboto:400,500,600,700" rel="stylesheet">
-    <link rel="icon" type="image/png" sizes="32x32" href="<%= BASE_URL %>favicon.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="<%= BASE_URL %>apple-touch-icon.png">
-    <link rel="manifest" href="<%= BASE_URL %>manifest.json">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+    <link rel="manifest" href="manifest.json">
   </head>
   <body>
     <noscript>
